# scanner

./: Cargo.toml  README.md
src/: lib.rs  read.rs  route.rs
src/parse/: bin.rs  cursors.rs  desktop.rs  elf.rs  fhs.rs  fonts.rs  icons.rs  libc.rs  libs.rs  man.rs  mod.rs  modules.rs  pm.rs  services.rs  themes.rs
src/profile/: mod.rs
tests/: scan.rs
