[package]
name = "scanner"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "scan module for nexus metadistribution core"
license = "GPL-2.0-only"
repository = "https://github.com/sqmrak/scanner"
keywords = ["rootfs", "inventory", "layer", "linux"]
categories = ["filesystem", "parsing"]

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
